--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "firebase": "^5.10.1",
     "materialize-css": "^1.0.0-rc.2",
     "register-service-worker": "^1.6.2",
+    "slugify": "^1.3.4",
+    "toastr": "^2.1.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
